--- a/.github/workflows/Terraform_create.yml
+++ b/.github/workflows/Terraform_create.yml
@@ -42,6 +42,12 @@ jobs:
       id: fmt
       run: terraform fmt -check
 
+    - name: Terraform Show
+      run: terraform show
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     - name: Terraform Plan
       id: plan
       run: terraform plan -no-color
